--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col-sm-4 col-md-4 mb-4 col-8 align-items-center text-white about-me-info">
+                    <div class="col-sm-4 col-md-4 mb-4 col-12 align-items-center text-white about-me-info">
                         <p class="about-me-info-1">Nazar Koval</p>
                         <p class="about-me-info-2">Back-End Developer</p>
                         <p class="about-me-info-3">Back-end magician seeking innovative projects to conjure up powerful and seamless technology
@@ -99,7 +99,7 @@
         <section>
             <div class="container">
                 <div class="about-me-story-container">
-                <img src="images/Logo.png" alt="">
+                <img src="images/Logo.png" class="about-me-story-img" alt="">
                 <p class="about-me-story">A few years ago, I became interested in developing websites and interfaces. Since then, I have been steadily improving my skills. Now I am developing websites and web applications to order or for myself.</p>
             </div>
             </div>
@@ -119,14 +119,14 @@
                         <span><br>css3</span>
                     </div>
                     <div class="skill-card">
-                        <img src="images/jsicon.png
-                        " alt="">
-                        <span style="text-transform: none;"><br>JavaScript</span>
+                        <img src="images/clogo.png" 
+                         width="128px"alt="">
+                        <span style="text-transform: none;"><br>C</span>
                     </div>
                     <div class="skill-card">
-                        <img src="images/sccsicon.png
-                        " alt="">
-                        <span><br>scss</span>
+                        <img src="images/sharplogo.png
+                        " width="128px" alt="">
+                        <span><br>c#</span>
                     </div>
                     <div class="skill-card">
                         <img src="images/giticon.png
@@ -139,21 +139,53 @@
         <section>
             <div class="container">
                 <p class="works-text">My Works</p>
-                    <div class="row justify-content-between">
-                        <div class="col-sm-4 col-md-4 mb-4 col-8 align-items-center text-white ">
-                            <span></span>
+                    <div class="row work-main">
+                        <div class="col-sm-4 col-md-4 mb-4 col-12 text-white work-card" style="background-image: url('images/Work-1.png'); ">
+                            <div class="work-text" style="background-color: rgba(33, 32, 29, 0.98); ">
+                                <p class="work-text-1">News Blog</p>
+                                <p class="work-text-2">html, scss, js</p>
+                                <p class="work-text-line"></p>
+                                <p class="work-text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <a class="work-text-btn nav-link">See more -></a>
+                            </div>
                         </div>
-                        <div class="col-sm-4 col-md-6 mb-4 col-8 ">
+                        <div class="col-sm-4 col-md-6 mb-6 col-12 text-white work-card" style="background-image: url('images/Work-1.png');">
                             <a href=""></a>
                         </div>
-                        <div class="col-sm-4 col-md-6 mb-4 col-8 ">
-                            <span></span>
+                        <div class="col-sm-6 col-md-6 mb-6 col-12 text-white work-card" style="background-image: url('images/Work-1.png');">
+                            <div class="work-text" style="background-color: rgba(33, 32, 29, 0.98); ">
+                                <p class="work-text-1">News Blog</p>
+                                <p class="work-text-2">html, scss, js</p>
+                                <p class="work-text-line"></p>
+                                <p class="work-text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <a class="work-text-btn nav-link">See more -></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+                <div class="row justify-content-evenly footer-main">
+                    <div class="col-sm-4 col-md-4 mb-4 col-8 text-white">
+                        <a class="navbar-brand" href="#"><span style="color: rgba(255, 131, 3, 1)">&lt;/S</span><span
+                            style="color: rgba(240, 227, 202, 1)">wayz<span></span><span
+                                style="color: rgba(255, 131, 3, 1)">e&gt;</span></a>
+
+                        <p class="footer-col-text-1">If you liked my work and you need me, I'm ready to talk to you.</p>
+                    </div>
+                    <div class="col-sm-4 col-md-4 mb-4 col-8 align-items-center ">
+                        <p class="footer-col-text-2">Contacts</p>
+                        <p class="footer-col-text-mail">📧 kovaloff10@gmail.com</p>
+                        <p class="footer-col-text-git"><img src="images/footergit.png" alt=""> Sway3zen</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="script/bootstrap.bundle.min.js"></script>
 </body>
