--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ window.onload = function() {
                         <span><br>css3</span>
                     </div>
                     <div class="skill-card">
-                        <img src="images/clogo.png" 
+                        <img src="images/Сlogo.png" 
                          width="128px"alt="">
                         <span style="text-transform: none;"><br>C</span>
                     </div>
